Fix figcaption background color in dark mode

--- a/src/styles/bundle.css
+++ b/src/styles/bundle.css
@@ -552,7 +552,7 @@ figure {
 	}
 
 	figure {
-		background-color: hsl(0, 0%, 18%);
+		--figure-background-color: hsl(0, 0%, 18%);
 	}
 
 	article h1, article h2, article h3, article h4, article h5, article h6 {
